# poetry-rust-example-project

./: Makefile  README.md  pyproject.toml
python/src/adders/: addition.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
