[tool.poetry]
name = "adders"
version = "0.1.0"
description = ""
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "adders", from = "python/src" },
]
include = [
    { path = "python/src/adders/**/*.so", format = "wheel" },
    { path = "python/src/adders/**/*.pyd", format = "wheel" },
    { path = "python/src/adders/**/*.dll", format = "wheel" },
]


[tool.poetry.dependencies]
python = "^3.8.1"
addersrs = {path = "rust"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core>=1.0.0a9"]
build-backend = "poetry.core.masonry.api"